--- a/index.html
+++ b/index.html
@@ -1,38 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <title>StarryF技术博客 - Github.io by StarryF</title>
-  </head>
+  <title>StarryF技术博客 - Github.io</title>
+  <meta name="description" content="StarryF技术博客">
 
-  <body>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
+</head>
+
+<body>
+
+  <div class="wrapper">
     <header>
-      <div class="container">
-        <h1>StarryF技术博客 - Github.io</h1>
-        <h2>StarryF技术博客</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/StarryF" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
+      <h1 class="title">StarryF技术博客 - Github.io</h1>
     </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h1>
+    <div id="container">
+      <p class="tagline">StarryF技术博客</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/StarryF" class="code">View StarryF技术博客 - Github.io on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h1>
 <a id="starryfgithubio" class="anchor" href="#starryfgithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>StarryF.github.io</h1>
 
 <p>StarryF技术博客</p>
-      </section>
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
 
-    
-  </body>
+      <p><a href="https://github.com/StarryF" class="avatar"><img src="https://avatars0.githubusercontent.com/u/8469660?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/StarryF">StarryF</a> on <a href="https://www.github.com">GitHub</a></p>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/StarryF/StarryF.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/StarryF/StarryF.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
